crates/plotnik-lib/src/compiler/compile/snapshots/plotnik_lib__compiler__compile__compile_tests__compile_optional_array_capture_split_exits.snap
---
source: crates/plotnik-compiler/src/compile/compile_tests.rs
---
Test = (program (expression_statement)* @rows)
---
[strings]
S0 "Beauty will save the world"
S1 "rows"
S2 "Test"
S3 "program"
S4 "expression_statement"

[type_defs]
T0 = <Node>
T1 = ArrayStar(T0)  ; <Node>*
T2 = Struct  M0:1  ; { rows }

[type_members]
M0: S1 → T1  ; rows: T1

[type_names]
N0: S2 → T2  ; Test

[entrypoints]
Test = 06 :: T2

[transitions]
_StructWrap:
  00  -ε-  [StructOpen]                     02
  02       Trampoline                       03
  03  -ε-  [StructClose]                    05
  05                                        ▶

Test:
  06   !   (program)                        08
  07  ...  
  08  -ε-  [ArrayOpen]                      18, 11
  10                                        ▶
  11  -ε-  [ArrayClose Set(M0)]             10
  13   !   (expression_statement) [Node Push]  22, 24
  15  ...  
  16  ─‣─  _                                13, 16
  18  └‣─  _                                13, 16
  20  ─‣─  _                                13, 20
  22  ─‣─  _                                13, 20
  24  ─‣┘  [ArrayClose Set(M0)] _           10
