crates/plotnik-lib/src/compiler/compile/snapshots/plotnik_lib__compiler__compile__compile_tests__compile_optional_suppressed_capture_split_exits.snap
---
source: crates/plotnik-lib/src/compiler/compile/compile_tests.rs
---
Test = (program {(identifier) @id}? @_)
---
[strings]
S0 "Beauty will save the world"
S1 "Test"
S2 "program"
S3 "identifier"

[type_defs]
T0 = <Void>

[type_members]

[type_names]
N0: S1 → T0  ; Test

[entrypoints]
Test = 06 :: T0

[transitions]
_StructWrap:
  00  -ε-  [StructOpen]                     02
  02       Trampoline                       03
  03  -ε-  [StructClose]                    05
  05                                        ▶

Test:
  06   !   (program)                        08
  07  ...  
  08  -ε-  [SuppressBegin]                  20, 16
  10   !   (identifier) [Node]              12
  12  ─‣┘  [SuppressEnd] _                  14
  14                                        ▶
  15  ...  
  16  -ε-  [SuppressEnd]                    14
  18  ─‣─  _                                10, 18
  20  └‣─  _                                10, 18
