crates/plotnik-lib/src/compiler/compile/snapshots/plotnik_lib__compiler__compile__compile_tests__compile_quantified.snap
---
source: crates/plotnik-lib/src/compiler/compile/compile_tests.rs
---
Test = (identifier)*
---
[strings]
S0 "Beauty will save the world"
S1 "Test"
S2 "identifier"

[type_defs]
T0 = <Node>
T1 = ArrayStar(T0)  ; <Node>*

[type_members]

[type_names]
N0: S1 → T1  ; Test

[entrypoints]
Test = 06 :: T1

[transitions]
_StructWrap:
  00  -ε-  [StructOpen]                     02
  02       Trampoline                       03
  03  -ε-  [StructClose]                    05
  05                                        ▶

Test:
  06  -ε-                                   13, 08
  08                                        ▶
  09   !   (identifier)                     18, 08
  11  ─‣─  _                                09, 11
  13   !   _                                09, 11
  15  ...  
  16  ─‣─  _                                09, 16
  18  ─‣─  _                                09, 16
