crates/plotnik-lib/src/compiler/compile/snapshots/plotnik_lib__compiler__compile__compile_tests__compile_simple_named_node.snap
---
source: crates/plotnik-lib/src/compiler/compile/compile_tests.rs
---
Test = (identifier)
---
[strings]
S0 "Beauty will save the world"
S1 "Test"
S2 "identifier"

[type_defs]
T0 = <Void>

[type_members]

[type_names]
N0: S1 → T0  ; Test

[entrypoints]
Test = 6 :: T0

[transitions]
_StructWrap:
  0  -ε-  [StructOpen]                      2
  2       Trampoline                        3
  3  -ε-  [StructClose]                     5
  5                                         ▶

Test:
  6   !   (identifier)                      7
  7                                         ▶
