crates/plotnik-lib/src/compiler/compile/snapshots/plotnik_lib__compiler__compile__compile_tests__compile_union_alternation_5_branches_with_captures.snap
---
source: crates/plotnik-lib/src/compiler/compile/compile_tests.rs
---
Q = [(identifier) @a (number) @b (string) @c (binary_expression) @d (call_expression) @e]
---
[strings]
S00 "Beauty will save the world"
S01 "a"
S02 "b"
S03 "c"
S04 "d"
S05 "e"
S06 "Q"
S07 "identifier"
S08 "number"
S09 "string"
S10 "binary_expression"
S11 "call_expression"

[type_defs]
T0 = <Node>
T1 = Struct  M0:5  ; { a, b, c, d, e }
T2 = Optional(T0)  ; <Node>?

[type_members]
M0: S01 → T2  ; a: T2
M1: S02 → T2  ; b: T2
M2: S03 → T2  ; c: T2
M3: S04 → T2  ; d: T2
M4: S05 → T2  ; e: T2

[type_names]
N0: S06 → T1  ; Q

[entrypoints]
Q = 08 :: T1

[transitions]
_StructWrap:
  00  -ε-  [StructOpen]                     02
  02       Trampoline                       03
  03  -ε-  [StructClose]                    05
  05                                        ▶
  06                                        ▶
  07  ...  

Q:
  08  -ε-                                   11, 18, 26, 34, 42
  11  -ε-  [Null Set(M1) Null Set(M2) Null Set(M3) Null]  14
  14  -ε-  [Set(M4)]                        16
  16   !   (identifier) [Node Set(M0)]      06
  18  -ε-  [Null Set(M0) Null Set(M2) Null Set(M3) Null]  21
  21  -ε-  [Set(M4)]                        24
  23  ...  
  24   !   (number) [Node Set(M1)]          06
  26  -ε-  [Null Set(M0) Null Set(M1) Null Set(M3) Null]  29
  29  -ε-  [Set(M4)]                        32
  31  ...  
  32   !   (string) [Node Set(M2)]          06
  34  -ε-  [Null Set(M0) Null Set(M1) Null Set(M2) Null]  37
  37  -ε-  [Set(M4)]                        40
  39  ...  
  40   !   (binary_expression) [Node Set(M3)]  06
  42  -ε-  [Null Set(M0) Null Set(M1) Null Set(M2) Null]  45
  45  -ε-  [Set(M3)]                        48
  47  ...  
  48   !   (call_expression) [Node Set(M4)]  06
