crates/plotnik-lib/src/compiler/compile/snapshots/plotnik_lib__compiler__compile__compile_tests__compile_union_alternation_8_branches_with_captures.snap
---
source: crates/plotnik-lib/src/compiler/compile/compile_tests.rs
---
Q = [(identifier) @a (number) @b (string) @c (binary_expression) @d
     (call_expression) @e (member_expression) @f (array) @g (object) @h]
---
[strings]
S00 "Beauty will save the world"
S01 "a"
S02 "b"
S03 "c"
S04 "d"
S05 "e"
S06 "f"
S07 "g"
S08 "h"
S09 "Q"
S10 "identifier"
S11 "number"
S12 "string"
S13 "binary_expression"
S14 "call_expression"
S15 "member_expression"
S16 "array"
S17 "object"

[type_defs]
T0 = <Node>
T1 = Struct  M0:8  ; { a, b, c, d, e, f, g, h }
T2 = Optional(T0)  ; <Node>?

[type_members]
M0: S01 → T2  ; a: T2
M1: S02 → T2  ; b: T2
M2: S03 → T2  ; c: T2
M3: S04 → T2  ; d: T2
M4: S05 → T2  ; e: T2
M5: S06 → T2  ; f: T2
M6: S07 → T2  ; g: T2
M7: S08 → T2  ; h: T2

[type_names]
N0: S09 → T1  ; Q

[entrypoints]
Q = 08 :: T1

[transitions]
_StructWrap:
  00  -ε-  [StructOpen]                     02
  02       Trampoline                       03
  03  -ε-  [StructClose]                    05
  05                                        ▶
  06                                        ▶
  07  ...  

Q:
  08  -ε-                                   11, 21, 29, 37, 45, 53, 61, 69
  11  -ε-  [Null Set(M1) Null Set(M2) Null Set(M3) Null]  16
  14  ...  
  15  ...  
  16  -ε-  [Set(M4) Null Set(M5) Null Set(M6) Null Set(M7)]  19
  19   !   (identifier) [Node Set(M0)]      06
  21  -ε-  [Null Set(M0) Null Set(M2) Null Set(M3) Null]  24
  24  -ε-  [Set(M4) Null Set(M5) Null Set(M6) Null Set(M7)]  27
  27   !   (number) [Node Set(M1)]          06
  29  -ε-  [Null Set(M0) Null Set(M1) Null Set(M3) Null]  32
  32  -ε-  [Set(M4) Null Set(M5) Null Set(M6) Null Set(M7)]  35
  35   !   (string) [Node Set(M2)]          06
  37  -ε-  [Null Set(M0) Null Set(M1) Null Set(M2) Null]  40
  40  -ε-  [Set(M4) Null Set(M5) Null Set(M6) Null Set(M7)]  43
  43   !   (binary_expression) [Node Set(M3)]  06
  45  -ε-  [Null Set(M0) Null Set(M1) Null Set(M2) Null]  48
  48  -ε-  [Set(M3) Null Set(M5) Null Set(M6) Null Set(M7)]  51
  51   !   (call_expression) [Node Set(M4)]  06
  53  -ε-  [Null Set(M0) Null Set(M1) Null Set(M2) Null]  56
  56  -ε-  [Set(M3) Null Set(M4) Null Set(M6) Null Set(M7)]  59
  59   !   (member_expression) [Node Set(M5)]  06
  61  -ε-  [Null Set(M0) Null Set(M1) Null Set(M2) Null]  64
  64  -ε-  [Set(M3) Null Set(M4) Null Set(M5) Null Set(M7)]  67
  67   !   (array) [Node Set(M6)]           06
  69  -ε-  [Null Set(M0) Null Set(M1) Null Set(M2) Null]  72
  72  -ε-  [Set(M3) Null Set(M4) Null Set(M5) Null Set(M6)]  75
  75   !   (object) [Node Set(M7)]          06
